Initial commit and set-up for front end

--- a/CryptoWalletApi/appsettings.json
+++ b/CryptoWalletApi/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=CryptoWallet;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=DESKTOP-PL0V9O7\\MSSQLSERVER2;Database=CryptoWallet;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "AllowedHosts": "*"
 }
