Code clean-up. Fixed some services' responsibilities. Added logging for GetCoins method in CoinsController. Configured logger for more strict logging.

--- a/CryptoWalletApi/appsettings.json
+++ b/CryptoWalletApi/appsettings.json
@@ -1,12 +1,28 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
   "ConnectionStrings": {
     "DefaultConnection": "Server=DESKTOP-PL0V9O7\\MSSQLSERVER2;Database=CryptoWallet;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "File",
+        "Args": {
+          "path": "logs\\CryptoWallet.log",
+          "rollingInterval": "Day"
+        }
+      },
+      {
+        "Name": "Console" // Optional: Log to the console as well
+      }
+    ],
+    "Enrich": [ "FromLogContext" ]
   },
   "AllowedHosts": "*"
 }
